--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
   
   
   
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="../dist/main.js"></script>
   </body>
 
 
